Encode IDN before passing to KMime or MessageQueueJob

Encode email addresses with IDN to puny code before passing them
to KMime::MailBox::fromUnicodeString() or setting the recipient
addresses on the MessageQueueJob, because both expect a domain part
without special characters.

BUG: 260615